# ceg3120-KWeaver87

./: README.md
Discord-Bot/: .gitignore  Cargo.toml  README.md  Snippets.md  discord-bot.service  riker-bot.service
Discord-Bot/data/: riker.json
Discord-Bot/src/: main.rs
Project1/: README.md
Project3/: README.md
Project4/: README.md  WEAVER-cf.yml
Project5/: README.md  WEAVER-cf.yml
Project5/files/: haproxy.cfg.append  init-script.sh  nftables.conf
Project5/www/: index1.html  index2.html
sample/: markdown-demo.md
scripts/: env_setup.sh
